# cognic-tool-oracle-schema

./: .gitignore  CHANGELOG.md  README.md  cognic-pack-manifest.toml  cosign.pub  docker-compose.oracle.yml  pyproject.toml  release.sh
.github/workflows/: ci.yml  sign-and-publish.yml
docs/: VALIDATION-RESULTS.md
src/cognic_tool_oracle_schema/: __init__.py  auth.py  config.py  credential.py  oracle.py  query_context.py  readonly_query.py  server.py  tools.py
tests/: __init__.py  _token_helpers.py  conftest.py  test_auth.py  test_config.py  test_credential.py  test_kernel_wire_pin.py  test_manifest.py  test_oracle.py  test_oracle_pool.py  test_query_context.py  test_release_policy.py  test_run_readonly_query.py  test_server.py  test_sql_gate.py  test_tool.py  test_tools.py
tests/fixtures/: seed_schema.sql
tests/integration/: conftest.py  test_oracle_integration.py  test_readonly_query_integration.py
