[project]
name = "cognic-tool-oracle-schema"
version = "0.1.0"
description = "Read-only Oracle schema-metadata MCP tools (Cognic AgentOS pack)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Cognic", email = "zaighum@msn.com" },
]

dependencies = [
    "mcp==1.27.0",
    "uvicorn[standard]>=0.35",
    "oracledb>=2.5",
    "PyJWT[crypto]>=2.10,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
    # AgentOS authoring/governance CLI — author/CI-time only (validate/sign/verify).
    "cognic-agentos @ git+https://github.com/bmzee/cognic-agentos@v0.0.2",
]

[project.entry-points."cognic.tools"]
oracle_schema = "cognic_tool_oracle_schema:SERVER_DESCRIPTOR"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# The kernel dev dep is a git direct reference; hatchling requires this opt-in.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cognic_tool_oracle_schema"]

[tool.hatch.build.targets.wheel.force-include]
"cognic-pack-manifest.toml" = "cognic_tool_oracle_schema/cognic-pack-manifest.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
