[project]
name = "cognic-tool-oracle-schema"
version = "0.3.0"
description = "Read-only Oracle schema-metadata MCP tools (Cognic AgentOS pack)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [
    { name = "Cognic", email = "zaighum@msn.com" },
]

dependencies = [
    "mcp==1.27.0",
    "uvicorn[standard]>=0.35",
    "oracledb>=2.5",
    "PyJWT[crypto]>=2.10,<3",
    # v0.3.0 (M8, ADR-027) — run_readonly_query deps. joserfc + cryptography
    # mirror the kernel's query-context pins (kernel pyproject: joserfc==1.6.4,
    # cryptography>=45) so pack-side verify tracks kernel-side mint behavior.
    "joserfc>=1.6.4,<2",
    "cryptography>=45",
    # Pure-Python SQL parser (NO sqlglotrs) — exact pin per the M8 B1 contract.
    "sqlglot==30.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
    "ruff>=0.9",
    "mypy>=1.14",
    # AgentOS authoring/governance CLI — author/CI-time only. Full-SHA pin to
    # the ADR-016 hardened signer used by the sibling approval-probe pack.
    "cognic-agentos @ git+https://github.com/bmzee/cognic-agentos@756b9abd02c59e8f1e0164bec975da0de166e70d",
]

[project.entry-points."cognic.tools"]
oracle_schema = "cognic_tool_oracle_schema:SERVER_DESCRIPTOR"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# The kernel dev dep is a git direct reference; hatchling requires this opt-in.
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cognic_tool_oracle_schema"]

[tool.hatch.build.targets.wheel.force-include]
"cognic-pack-manifest.toml" = "cognic_tool_oracle_schema/cognic-pack-manifest.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["oracle: integration tests requiring a live Oracle XE (env-gated by COGNIC_RUN_ORACLE_INTEGRATION=1)"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# Conservative: ruff's default rule set (pyflakes + a safe pycodestyle
# subset) made explicit — exactly what the committed tree already passes.
# Intentionally NOT the kernel's broader E/W/I/B/UP/SIM/RUF set, which would
# surface fresh violations (e.g. E501 line-length) in source this pack would
# have to reformat. Widen deliberately in a follow-up once the tree is clean.
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.12"
# Conservative: match the tree's current (default, non-strict) passing
# behavior. The kernel runs `strict = true`, but enabling strict here surfaces
# pre-existing [no-untyped-def] / [type-arg] findings in src + tests. These two
# warnings add no new errors on the current tree; tighten in a follow-up.
warn_unused_configs = true
warn_redundant_casts = true
